--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ sound.loop = true;
 // define a function to display the current time
 function displayTime() {
   var now = new Date();
-  time = now.toLocaleTimeString();
+  time = now.toLocaleTimeString('en-US',{timeZone:'Asia/Kolkata'});
   clock.textContent = time;
   // time = "1:00:00 AM";
   // watch for alarm
@@ -232,7 +232,7 @@ function addMinSecVals(id) {
 
 function addHours(id) {
   var select = id;
-  var hour = 12;
+  var hour = 24;
   
   for (i = 1; i <= hour; i++) {
     // defined as new Option(text, value)
